--- a/docs/emails.Rmd
+++ b/docs/emails.Rmd
@@ -9,32 +9,61 @@ showDate: false
 
 Please note that not all links will be avaliable as this is an archive of the emails. Check the Announcements page for active links to conference submissions and other nominations. 
 
+### Conference Update - September 3, 2021
+
+Hi SCiPpers!
+
+As per usual, we are extending the deadline for conference presentations. We should be able to take presentation submissions for another week in order to meet the deadlines for giving our information to the Psychonomic Society. Please note the conference is now fully virtual in line with Psychonomic Society’s recent decision. We will automatically convert any “in person” submissions to virtual. If you would like to update anything else with your submission, you can resubmit or contact compinpsych\@gmail.com. 
+
+Submit for the conference: https://forms.gle/aRD35wAMhnQTpaFs7 by September 10th.
+Nominate members or yourself for FABBS Early Career Award: https://forms.gle/z1mdg6hGWhqARZjBA by September 10th. 
+The conference fees will be the same as last year \$15 for students/post docs and \$25 for faculty. We will accept payments on our website soon and an invoice will be sent to each author directly (if an author is not attending they can simply email that information to compinpsych\@gmail.com).
+
+Important Due Dates: 
+Conference Submissions - September 10
+Nominate Early Career Awards - September 10
+Steering Committee/Presentation Notices - September 15
+Notification for Acceptance for Conference  - September 15
+Online Spoken Talks Due - TBA
+Castellen Students Papers Due - October 1
+Online Poster Presentations Due - October 12
+Access to Virtual Platform - October 18
+Conference - November 4
+
+Sincerely,
+Pietro Cipresso (U. Turin), SCiP President
+Erin Buchanan (Harrisburg U.), SCiP Executive Director
+Rick Dale (UCLA), SCiP Executive Director
+ 
+PS - Please note that I (Erin) had to evacuate due to Hurricane Ida. I am doing my best to respond to emails, but if it’s been several days, please feel free to message compinpsych\@gmail.com a reminder. 
+
+
 ### Conference Reminder - August 16, 2021
 
 Hi SCiPpers!
 
 Three important tasks for you:
 
-        - Nominate members or yourself for the Steering Committee and President: https://forms.gle/15H4HXPFRik3p7Ly7 extended to August 31st.
-        - Submit for the conference: https://forms.gle/aRD35wAMhnQTpaFs7 by August 31st.
-        - Nominate members or yourself for FABBS Early Career Award: https://forms.gle/z1mdg6hGWhqARZjBA by September 10th. 
+- Nominate members or yourself for the Steering Committee and President: https://forms.gle/15H4HXPFRik3p7Ly7 extended to August 31st.
+- Submit for the conference: https://forms.gle/aRD35wAMhnQTpaFs7 by August 31st.
+- Nominate members or yourself for FABBS Early Career Award: https://forms.gle/z1mdg6hGWhqARZjBA by September 10th. 
 
 Conference Update: The Psychonomic Society is still planning for a hybrid conference, but is monitoring the situation in Louisiana (which is currently not optimal). The city of New Orleans has recently put in a mandate that patrons must show vaccination proof or a negative COVID test to enter buildings. We will monitor the situation to be flexible with those who want to change to virtual presentations if that need arises. 
 
 Important Due Dates: 
  
-        - Nominate Steering Committee Members / President - August 31
-        - Conference Submissions - August 31
-        - Nominate Early Career Awards - September 10
-        - We submit agenda to Psychonomics - September 13
-        - Notification to you of presentation - September 15
-        - Steering Committee / President Election - September 15
-        - Finalized agenda to Psychonomics -  September 20
-        - Castellan Papers due - October 1
-        - Online Poster presentations due - October 12
-        - Online Spoken presentations due - October TBD
-        - Virtual Platform Access - October 18
-        - Conference - November 4
+- Nominate Steering Committee Members / President - August 31 
+- Conference Submissions - August 31
+- Nominate Early Career Awards - September 10
+- We submit agenda to Psychonomics - September 13
+- Notification to you of presentation - September 15
+- Steering Committee / President Election - September 15
+- Finalized agenda to Psychonomics -  September 20
+- Castellan Papers due - October 1
+- Online Poster presentations due - October 12
+- Online Spoken presentations due - October TBD
+- Virtual Platform Access - October 18
+- Conference - November 4
  
 Sincerely,
 Pietro Cipresso (U. Turin), SCiP President
