update website with conference

--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -17,16 +17,10 @@ You can view our previous emails to the society [using this link](/emails/).
 
 ### Conference Information
 
-The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **virtual** event on **November 4th** from **8:00 - 5:00 PM Central Time**. Please check out the [Conference](/conference/) page for more information. Submissions are due **September 10th, 2021**.
+The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **virtual** event on **November 4th** from **8:00 - 5:00 PM Central Time**. Please check out the [Conference](/conference/) page for more information. 
 
-#### [Submit to SCiP 2021](https://forms.gle/cZ9nmCyvxvmh21J66 )
+#### [View the Program](https://docs.google.com/document/d/1NSReHO97ClcSTgthCA58Y5BtauM8i0VPFAzgpnNsUGw/edit?usp=sharing) 
 
-### FABBS Early Career Award
-
-[The Federation of Associations in Behavioral & Brain Sciences (FABBS)](https://fabbs.org/) represents a coalition of scientific societies with a common goal of advancing our understanding of mind, brain and behavior. SCiP has been a member society of FABBS for several years. FABBS educates federal representatives and Congress on sciences of the mind, advocates for legislation and policy that enhance scientific training and research, and more. Because we are a FABBS society, members of SCiP get free access to [Policy Insights from the Behavioral and Brain Sciences](https://journals.sagepub.com/home/bbs) (PIBBS).
-
-FABBS organizes the [Early Career Impact Award](https://fabbs.org/honoring-our-scientists/impact-award-winners/), and each of its member societies, every few years, chooses a recipient whose research has already made a big impact at an early stage of professional development.
-
-#### [Nominate a Scholar](https://forms.gle/z1mdg6hGWhqARZjBA)
+#### [Pay Your Conference Dues](https://www.paypal.com/donate?hosted_button_id=D4PN39CWFS4NE)
 
 #### [Subscribe to the Mailing List](https://mailchi.mp/4df6e290ffee/ub0p519mz8)
