--- a/content/post/conference.Rmd
+++ b/content/post/conference.Rmd
@@ -11,13 +11,15 @@ showDate: false
 
 The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **virtual** event on **November 4th** from **8:00 - 5:00 PM Central Time**. 
 
-The theme for this year’s conference is 50 Years of Computation. As the world increasingly relies on computation, we look back to the advances and innovations from psychology and beyond. Submissions reflecting on the history of advancement in their area are welcomed. We also encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. To submit an abstract or symposium proposal, [please follow the instructions on our online submission form](https://forms.gle/cZ9nmCyvxvmh21J66). Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
+The theme for this year’s conference is 50 Years of Computation. As the world increasingly relies on computation, we look back to the advances and innovations from psychology and beyond. Submissions reflecting on the history of advancement in their area are welcomed. 
 
-**Important reminder**: Because we are making use of the online platform for the event, make sure also to register at the main Psychonomic Society site, then on Mediasite. Links will be provided when they are available.
+**Important reminder**: Because we are making use of the online platform for the event, make sure also to register at the main Psychonomic Society site. Links will be provided when they are available.
 
-### [Submit to SCiP 2021](https://forms.gle/cZ9nmCyvxvmh21J66)
+### [View the Program](https://docs.google.com/document/d/1NSReHO97ClcSTgthCA58Y5BtauM8i0VPFAzgpnNsUGw/edit?usp=sharing)
 
-## Conference Supporters
+### [Pay Your Conference Dues](https://www.paypal.com/donate?hosted_button_id=D4PN39CWFS4NE)
+
+## Conference Supporters 
 
 ```{r echo = F, fig.align='center', fig.alt="SCiP Sponsors", out.height="80%"}
 knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/master/files/imgs/sponsors.jpg")
