--- a/docs/post/governance.Rmd
+++ b/docs/post/governance.Rmd
@@ -10,7 +10,7 @@ showDate: false
 ### President and Directorship
 
 - President: Pietro Cipresso, University of Turin
-- President-Elect: TBA
+- President-Elect: Laura Allen, University of New Hampshire
 - Executive Director: Erin Buchanan, Harrisburg University
 - Executive Director: Rick Dale, UCLA
 
@@ -20,6 +20,8 @@ showDate: false
 - 2018-2021: Kay Livesay, Linfield College
 - 2021-2024: Xiaowei Zhao, Emmanuel College
 - 2021-2024: Caitlin Mills, University of New Hampshire
+- 2022-2025: Ulf-Dietrich Reips, University of Konstanz
+- 2022-2025: Brendan Johns, McGill University
 
 [Click here for SCiP's bylaws](https://docs.google.com/document/d/1lM7udTN3c8P17Xx5mkf6xChUIKabMR2y8Ibz2qfQbNk/edit)
 
