added fee amounts

--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -23,4 +23,7 @@ The Annual Meeting of the Society for Computation in Psychology (SCiP) takes pla
 
 #### [Pay Your Conference Dues](https://www.paypal.com/donate?hosted_button_id=D4PN39CWFS4NE)
 
+- Student and Post Docs: $15
+- Faculty/Independent Researchers (people with jobs who’ve graduated): $25 
+
 #### [Subscribe to the Mailing List](https://mailchi.mp/4df6e290ffee/ub0p519mz8)
