--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -17,13 +17,6 @@ You can view our previous emails to the society [using this link](/emails/).
 
 ### Conference Information
 
-The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **virtual** event on **November 4th** from **8:00 - 5:00 PM Central Time**. Please check out the [Conference](/conference/) page for more information. 
-
-#### [View the Program](https://docs.google.com/document/d/1NSReHO97ClcSTgthCA58Y5BtauM8i0VPFAzgpnNsUGw/edit?usp=sharing) 
-
-#### [Pay Your Conference Dues](https://www.paypal.com/donate?hosted_button_id=D4PN39CWFS4NE)
-
-- Student and Post Docs: $15
-- Faculty/Independent Researchers (people with jobs who’ve graduated): $25 
+The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2022 should be held this year in Boston and more information should be coming soon.
 
 #### [Subscribe to the Mailing List](https://mailchi.mp/4df6e290ffee/ub0p519mz8)
