--- a/content/post/conference.Rmd
+++ b/content/post/conference.Rmd
@@ -9,18 +9,7 @@ showDate: false
 
 ## 2021 Conference Details
 
-The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **virtual** event on **November 4th** from **8:00 - 5:00 PM Central Time**. 
-
-The theme for this year’s conference is 50 Years of Computation. As the world increasingly relies on computation, we look back to the advances and innovations from psychology and beyond. Submissions reflecting on the history of advancement in their area are welcomed. 
-
-**Important reminder**: Because we are making use of the online platform for the event, make sure also to register at the main Psychonomic Society site. Links will be provided when they are available.
-
-### [View the Program](https://docs.google.com/document/d/1NSReHO97ClcSTgthCA58Y5BtauM8i0VPFAzgpnNsUGw/edit?usp=sharing)
-
-### [Pay Your Conference Dues](https://www.paypal.com/donate?hosted_button_id=D4PN39CWFS4NE)
-
-- Student and Post Docs: $15
-- Faculty/Independent Researchers (people with jobs who’ve graduated): $25
+The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2022 should be held this year in Boston and more information should be coming soon.
 
 ## Conference Supporters 
 
