--- a/docs/post/awards.Rmd
+++ b/docs/post/awards.Rmd
@@ -36,6 +36,16 @@ knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computati
 
 FABBS organizes the [Early Career Impact Award](https://fabbs.org/honoring-our-scientists/impact-award-winners/), and each of its member societies, every few years, chooses a recipient whose research has already made a big impact at an early stage of professional development.
 
+#### 2021: Dr. Brendan Johns, McGill University
+
+Dr. Brendan Johns is an Assistant Professor in the Department of Psychology at McGill University. The goal of his research is to redefine the field of computational cognitive science through trailblazing cognitive model development grounded in machine learning and big data methodologies. Dr. Johns’ research capitalizes on today’s incredible technology to collect human behavior at scale. The range and types of data that can now be assembled is unprecedented, from controlled crowdsourcing to data mining social media. Big data analytics and machine learning offers new opportunities to provide insights across psychology, and the research undertaken by Dr. Johns is an example of the power and promise of this research area.
+
+Dr. Johns conducts cutting-edge theoretical and applied research. The goal of the theoretical research prong is to understand the statistical underpinnings of the natural language environment and to determine how humans learn from this information. The applied research prong uses the resulting knowledge-based intelligence systems to generate cognitive technologies that can be widely deployed, such as the development of new automated clinical and educational computational tools. The ultimate aim of his research is to understand the computational underpinnings of human cognition and to use this knowledge to integrate cognitive computations into disruptive technology development.
+
+This research has resulted in 47 published articles, many in top journals in his field, including Psychological Review, Cognitive Psychology, Psychonomic Bulletin & Review, and Behavior Research Methods, among others. His research is funded from a 5-year Discovery Grant from the Natural Sciences and Engineering Research Council of Canada, among other funding sources.  Dr. Johns received numerous research awards during his time as a graduate student, such as the Marr prize from the Cognitive Science Society for best student paper. After receiving his Ph.D. he continued receiving research awards, as he won the article of the year award in the Canadian Journal of Experimental Psychology in 2015 from the the Canadian Psychological association, as well as a member-select speaker award from the Psychonomic Society in 2017.
+
+Dr. Johns has also provided service to his field. He is currently an associate editor for the journal Behavior Research Methods and is on the editorial board at Canadian Journal of Experimental Psychology. He is currently on the steering committee of the Society for Computation in Psychology and was also a previous member from 2016-2019.
+
 #### 2019: Dr. Laura Allen, University of New Hampshire
 
 A prominent aim of Dr. Allen's research is to investigate the higher-level cognitive skills that are required for successful text comprehension and production, as well as the ways in which performance in these domains can be enhanced through strategy instruction and training. She has conducted a number of studies to understand how individual differences in cognitive skills and knowledge relate to performance on reading comprehension and writing assessments. This research has revealed a number of characteristics of successful readers and writers, such as their ability to generate inferences, their knowledge of vocabulary, and their ability to flexibly adapt their language across multiple tasks. Dr. Allen has drawn upon the findings from these studies to examine the impact of manipulating task instructions on task performance and to explore how educational technologies can be leveraged to facilitate learning. Laura has published approximately 80 peer reviewed publications, including 29 as first author, since 2013 -- a short and impressively productive career to date!
