--- a/docs/post/conference.Rmd
+++ b/docs/post/conference.Rmd
@@ -7,9 +7,9 @@ url: /conference/
 showDate: false
 ---
 
-## 2021 Conference Details
+## 2022 Conference Details
 
-The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2022 should be held this year in Boston and more information should be coming soon
+The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2022 should be held this year in Boston and more information should be coming soon.
 
 ## Conference Supporters 
 
