--- a/content/emails.Rmd
+++ b/content/emails.Rmd
@@ -7,7 +7,29 @@ url: /emails/
 showDate: false
 ---
 
-Please note that not all links will be avaliable as this is an archive of the emails. Check the Announcements page for active links to conference submissions and other nominations. 
+Please note that not all links will be available as this is an archive of the emails. Check the Announcements page for active links to conference submissions and other nominations. 
+
+### Conference Submissions - June 23rd, 2022
+
+Dear colleague,
+ 
+We now invite nominations for candidates for [a] three positions on the Society's Steering Committee, [b] for the new President-Elect. All members are invited to participate in this process. Learn more about the nomination process and voting here. You can nominate yourself or others while submitting your abstract for the conference. Note you can also just nominate individuals without submitting an abstract. Use this submission form for nominations and abstract submission. 
+ 
+The 52nd annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 17, 2022, before the opening of the annual meeting of the Psychonomic Society. We invite you to submit your abstract by August 1, 2022. We will be holding this event in person in Boston in tandem with the Psychonomic Society Meeting. 
+ 
+The theme for this year’s conference is Psychology in the Age of Technology: Implications for Philosophy, Methods, and Practice. How has psychological study changed with the advances in technology? What is our role in this change? We also encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. To submit an abstract or symposium proposal, please follow the instructions on our online submission form or linked on our website. Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
+ 
+Sincerely,
+Laura Allen (U. Minnesota), SCiP President
+Erin Buchanan (Harrisburg U.), SCiP Executive Director
+ 
+Special Collection of Behavior Research Methods
+ 
+Student Awards
+ 
+First-time graduate student presenters are strongly encouraged to submit abstracts. If you are a first-time graduate student attending SCiP, and the primary presenter, you may be eligible to have your registration waived as part of the Birnbaum Scholarship for first-time graduate presenters. Please contact our Executive Director, Erin Buchanan at compinpsych@gmail.com for details. 
+ 
+The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results (up to 3000 words, excluding references, tables, figures, and a title page). Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by November 1, 2022. The award for the outstanding student paper will be announced after the conference. 
 
 ### Conference Update - September 3, 2021
 
