--- a/content/post/awards.Rmd
+++ b/content/post/awards.Rmd
@@ -46,6 +46,8 @@ This research has resulted in 47 published articles, many in top journals in his
 
 Dr. Johns has also provided service to his field. He is currently an associate editor for the journal Behavior Research Methods and is on the editorial board at Canadian Journal of Experimental Psychology. He is currently on the steering committee of the Society for Computation in Psychology and was also a previous member from 2016-2019.
 
+**Update**: Dr. Johns also won the [Early Career Award from the Psychonomic Society!](https://www.psychonomic.org/page/early_career_award)
+
 #### 2019: Dr. Laura Allen, University of New Hampshire
 
 A prominent aim of Dr. Allen's research is to investigate the higher-level cognitive skills that are required for successful text comprehension and production, as well as the ways in which performance in these domains can be enhanced through strategy instruction and training. She has conducted a number of studies to understand how individual differences in cognitive skills and knowledge relate to performance on reading comprehension and writing assessments. This research has revealed a number of characteristics of successful readers and writers, such as their ability to generate inferences, their knowledge of vocabulary, and their ability to flexibly adapt their language across multiple tasks. Dr. Allen has drawn upon the findings from these studies to examine the impact of manipulating task instructions on task performance and to explore how educational technologies can be leveraged to facilitate learning. Laura has published approximately 80 peer reviewed publications, including 29 as first author, since 2013 -- a short and impressively productive career to date!
