--- a/docs/post/conference.Rmd
+++ b/docs/post/conference.Rmd
@@ -18,6 +18,7 @@ Pay your conference fee/register for the conference using our PayPal link: [here
   - If your university/job is covering the cost of the conference, consider covering the fees for us! (not necessary, just an option).
   - If you use a paypal account, we will see the name associated with that account. If you pay directly with a credit card (no PayPal account necessary), your information will be grabbed from that page. If you are paying for someone else, please leave a note or send an email to compinpsych@gmail.com so we can make name tags. 
   - We are registered 503(c), which makes your donation a tax exemption if you are in the United States! This registration also lowers the credit card/paypal fees. 
+  - You can also pay by cash or check in person at the conference (US Dollars). 
  
 The 52nd annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 17, 2022, before the opening of the annual meeting of the Psychonomic Society. We will be holding this event in person in Boston in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2022AnnualMeeting). 
  
