--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -15,37 +15,26 @@ knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computati
 
 You can view our previous emails to the society [using this link](/emails/). 
 
-### 2022 Election Information 
+### 2023 Election Information 
 
-[Use this submission form for confirming our nomminees.](https://forms.gle/WS22KA3LELSp4poh8)
+[Submit your nominations for president elect and board now!](https://forms.gle/9yE4Eymf56v6TkFw8)
  
-### 2022 Conference Information
+### 2023 Conference Information
 
-Pay your conference fee/register for the conference using our PayPal link: [here](https://www.paypal.com/donate/?hosted_button_id=D4PN39CWFS4NE).
-
-  - Pick a price point below:
-    - Student and Post Docs: $50.00
-    - Faculty/Independent Researchers (people with jobs who’ve graduated): $100.00
-    - I feel like covering some extra fees: $105.00
-  - If your university/job is covering the cost of the conference, consider covering the fees for us! (not necessary, just an option).
-  - If you use a paypal account, we will see the name associated with that account. If you pay directly with a credit card (no PayPal account necessary), your information will be grabbed from that page. If you are paying for someone else, please leave a note or send an email to compinpsych@gmail.com so we can make name tags. 
-  - We are registered 503(c), which makes your donation a tax exemption if you are in the United States! This registration also lowers the credit card/paypal fees. 
-  - You can also pay by cash or check in person at the conference (US Dollars). 
+The 53rd annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 16, 2023, before the opening of the annual meeting of the Psychonomic Society. We will be holding this event in person in San Francisco in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2023annualmeeting). 
  
-The 52nd annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 17, 2022, before the opening of the annual meeting of the Psychonomic Society. We will be holding this event in person in Boston in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2022AnnualMeeting). 
- 
-The theme for this year’s conference is Psychology in the Age of Technology: Implications for Philosophy, Methods, and Practice. How has psychological study changed with the advances in technology? What is our role in this change? Check out the program [here](https://docs.google.com/document/d/1XibXISDe_kTiA3O7z3FsPJRYhTYuJ87t9JqBreXqXvM/edit?usp=sharing).
+The theme for this year’s conference is Advancing Theory by Opening the Black Box: Uses of AI in Psychology. We encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. [To submit an abstract or symposium proposal, please follow the instructions on our online submission form](https://forms.gle/9yE4Eymf56v6TkFw8). Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
 
-### 2022 Student Award Information
+### 2023 Student Award Information
 
 First-time graduate student presenters are strongly encouraged to submit abstracts. If you are a first-time graduate student attending SCiP, and the primary presenter, you may be eligible to have your registration waived as part of the Birnbaum Scholarship for first-time graduate presenters. Please contact our Executive Director, Erin Buchanan at compinpsych@gmail.com for details. 
  
-The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results (up to 3000 words, excluding references, tables, figures, and a title page). Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by November 1, 2022. The award for the outstanding student paper will be announced after the conference. 
+The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results (up to 3000 words, excluding references, tables, figures, and a title page). Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by October 15th, 2023. The award for the outstanding student paper will be announced after the conference. 
 
 ### Special Section of Behavior Research Methods
 
 [View the collection](https://link.springer.com/collections/cbcgciabad)
 
-Conference presenters (both spoken and poster presentations) are invited to submit articles based on presentations at the SCiP meeting to a special section of Behavior Research Methods, the official journal of the Society. Submissions should be prepared according to the guidelines of BRM and submitted through the BRM submission portal. It is important to indicate that the submission is for the “SCiP Issue.” in the online portal. Submissions are reviewed and published in an online collection, and therefore, they can be submitted at any time. 
+Conference presenters (both spoken and poster presentations) are invited to submit articles based on presentations at the SCiP meeting to a special section of Behavior Research Methods, the official journal of the Society. Submissions should be prepared according to the guidelines of BRM and submitted through the BRM submission portal. It is important to indicate that the submission is for the "SCiP Issue" in the online portal. Submissions are reviewed and published in an online collection, and therefore, they can be submitted at any time. 
 
 #### [Subscribe to the Mailing List](https://mailchi.mp/4df6e290ffee/ub0p519mz8)
