--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -15,21 +15,13 @@ knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computati
 
 You can view our previous emails to the society [using this link](/emails/). 
 
-### 2023 Conference Information
+### 2023 Conference Information 
 
-### [Program](https://docs.google.com/document/d/1Fc980u5TAe7RG0chN235-Ts2hMCaz65buaMjSCo-2-0/edit?usp=sharing)
-
-### [Pay Conference Fee](https://www.paypal.com/donate/?hosted_button_id=D4PN39CWFS4NE)
-
-The 53rd annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 16, 2023, before the opening of the annual meeting of the Psychonomic Society. We will be holding this event in person in San Francisco in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2023annualmeeting).
- 
-The theme for this year’s conference is Advancing Theory by Opening the Black Box: Uses of AI in Psychology. 
+Thanks for attending the conference!
 
 ### 2023 Student Award Information
 
-First-time graduate student presenters are strongly encouraged to submit abstracts. If you are a first-time graduate student attending SCiP, and the primary presenter, you may be eligible to have your registration waived as part of the Birnbaum Scholarship for first-time graduate presenters. Please contact our Executive Director, Erin Buchanan at compinpsych@gmail.com for details. 
- 
-The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results (up to 3000 words, excluding references, tables, figures, and a title page). Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by October 15th, 2023. The award for the outstanding student paper will be announced after the conference. 
+Castellan winners have been announced! Check out the awards page. 
 
 ### Special Section of Behavior Research Methods
 
