--- a/content/post/conference.Rmd
+++ b/content/post/conference.Rmd
@@ -7,34 +7,20 @@ url: /conference/
 showDate: false
 ---
 
-### 2023 Conference Information 
+### 2024 Conference Information 
 
-Thank you all for attending SCiP and see you next year in NYC!
+#### [Submit Abstracts](https://forms.gle/FiWFFXdvSCkeXi7M7)
 
-### [Program](https://docs.google.com/document/d/1Fc980u5TAe7RG0chN235-Ts2hMCaz65buaMjSCo-2-0/edit?usp=sharing) 
+The 54th annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 21, 2024, before the opening of the annual meeting of the Psychonomic Society. We invite you to submit your abstract by August 31, 2024. We will be holding this event in person in New York in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2024annualmeeting).
 
-### [Pay Conference Fee](https://www.paypal.com/donate/?hosted_button_id=D4PN39CWFS4NE)
 
-The 53rd annual meeting of the Society for Computation in Psychology (SCiP) is pleased to announce its call for abstracts. The meeting will be held on Thursday, November 16, 2023, before the opening of the annual meeting of the Psychonomic Society. We will be holding this event in person in San Francisco in tandem with the [Psychonomic Society Meeting](https://www.psychonomic.org/page/2023annualmeeting). 
+The theme for this year’s conference is Digital Cognitive Science: Software-driven Insights into the Mind. We encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. To submit an abstract or symposium proposal, please follow the instructions on our [online submission form](https://forms.gle/FiWFFXdvSCkeXi7M7). Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
  
-The theme for this year’s conference is Advancing Theory by Opening the Black Box: Uses of AI in Psychology. 
-
-Pay your conference fee/register for the conference using our PayPal link: [here](https://www.paypal.com/donate/?hosted_button_id=D4PN39CWFS4NE).  
-  - We do our best each year to balance cost to keep it as affordable as possible. 
-  - Pick a price point below:
-    - Student and Post Docs: $75.00
-    - Faculty/Independent Researchers (people with jobs who've graduated): $125.00
-    - I feel like covering some extra fees: $130.00
-  - If your university/job is covering the cost of the conference, consider covering the fees for us! (not necessary, just an option).
-  - If you use a paypal account, we will see the name associated with that account. If you pay directly with a credit card (no PayPal account necessary), your information will be grabbed from that page. If you are paying for someone else, please leave a note or send an email to compinpsych@gmail.com so we can make name tags. 
-  - We are registered 503(c), which makes your donation a tax exemption if you are in the United States! This registration also lowers the credit card/paypal fees. 
-  - You can also pay by cash or check in person at the conference (US Dollars). 
- 
-### 2023 Student Award Information
+### 2024 Student Award Information
 
 First-time graduate student presenters are strongly encouraged to submit abstracts. If you are a first-time graduate student attending SCiP, and the primary presenter, you may be eligible to have your registration waived as part of the Birnbaum Scholarship for first-time graduate presenters. Please contact our Executive Director, Erin Buchanan at compinpsych@gmail.com for details.
  
-The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results (up to 3000 words, excluding references, tables, figures, and a title page). Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by October 15th, 2023. The award for the outstanding student paper will be announced after the conference. 
+The Society sponsors The Castellan Student Paper Award for the outstanding student paper. Student papers should consist of a brief introduction, methods, and results (up to 3000 words, excluding references, tables, figures, and a title page). Student papers on the application of computers to any area of psychology (theoretical, experimental, applied) are welcome. Eligibility is open to work done by a student currently enrolled in undergraduate or graduate courses, or work done as part of a course, thesis, or other student research by a person who graduated within the last year. The student must be the primary author and the presenter of the paper. The winning author will receive a one year membership in the Society and a $200 cash prize. Students are required to submit the complete manuscript for evaluation for the competition by October 15th, 2024. The award for the outstanding student paper will be announced after the conference. 
 
 ## Conference Supporters 
 
