--- a/docs/emails.Rmd
+++ b/docs/emails.Rmd
@@ -9,7 +9,39 @@ showDate: false
 
 Please note that not all links will be available as this is an archive of the emails. Check the Announcements page for active links to conference submissions and other nominations.
 
-### Call for 2024 Conference
+### Program, Late Breaking Posters, Conference Registration - October 17th, 2024
+
+SCiP 2024 Conference
+
+Hello everyone! The SCiP Program for the 2024 conference is now available for everyone with a few small pending updates. You can view the program by using this link. The program has the complete schedule, locations, and preparation for SCiP 2024. The theme this year is Digital Cognitive Science: Software Driving Insights into the Mind. We hope you join us in New York.
+Register and Pay Conference Fee
+
+Pay your conference fee/register for the conference using our PayPal link.
+
+Pick a price point on the site:
+
+- Student and Post Docs: $80.00
+- Faculty/Independent Researchers (people with jobs who’ve graduated): $150.00
+- I feel like covering some extra fees: $155.00
+- Note: The increase is due to the increase in cost of food for New York and the increase in FABBS due. We do our best to break even to keep costs down for everyone.  
+
+If your university/job is covering the cost of the conference, consider covering the fees for us! (not necessary, just an option). If you use a paypal account, we will see the name associated with that account. If you pay directly with a credit card (no PayPal account necessary), your information will be grabbed from that page. If you are paying for someone else, please leave a note or send an email to compinpsych@gmail.com so we can make name tags. We are registered 503(c), which makes your donation a tax exemption if you are in the United States! This registration also lowers the credit card/paypal fees. You can also pay by cash or check in person at the conference (US Dollars).
+Late Breaking Posters
+
+
+If you, your students, or colleagues want to present a poster at the conference - we still have room! We will accept these until November 10th. Please fill out the submission form here.
+
+
+Let us know if you have any questions.
+
+
+Thank you!
+
+Shelia Kennison, President
+
+Erin Buchanan, Executive Director
+
+### Call for 2024 Conference - July 16th, 2024
 
 Dear colleague,
 
